# capture-c

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_linux.yml  build_macos.yml
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  main.c
src/include/swamp-capture/: in_capture.h  out_capture.h
src/lib/: CMakeLists.txt  in_capture.c  out_capture.c
